--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,32 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="jumbotron center">
+	<h1>Short Message Service<span class="glyphicon glyphicon-phone" aria-hidden="true"></span></h1>
+    Submit an SMS message here!
+ 
+  <p>
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h3 class="panel-title">Phone Number</h3>
+      </div>
+      <div class="panel-body">
+        <%= form_tag("/search", method: "get") do %>
+            <%= text_field_tag 'sms', nil, placeholder: 'Enter number here...', size: 75 %>
+          <% end %>
+      </div>
+    </div>
+  </p>
+  
+    <p>
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h3 class="panel-title">SMS Message</h3>
+      </div>
+      <div class="panel-body">
+        <%= form_tag("/search", method: "get") do %>
+            <%= text_field_tag 'sms', nil, placeholder: 'Enter text here...', size: 75 %>
+          <% end %>
+      </div>
+    </div>
+  </p>
+  
 
-<%= form_tag("/sms/send", method: "post") do %>
-<!-- add form elements here -->
-<% end %>
+<button type="button" class="btn btn-success btn-lg" id="success">Send</button>
