--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron center">
-	<h1>Short Message Service<span class="glyphicon glyphicon-phone" aria-hidden="true"></span></h1>
+	<h1>Quick Chat <span class="glyphicon glyphicon-phone" aria-hidden="true"></span></h1>
     Submit an SMS message here!
  
   <p>
