--- a/app/views/pages/sms.html.erb
+++ b/app/views/pages/sms.html.erb
@@ -1,2 +1,30 @@
-<h1>Pages#sms</h1>
-<p>Find me in app/views/pages/sms.html.erb</p>
+<div class="jumbotron center">
+	<h1>Quick Chat <span class="glyphicon glyphicon-phone" aria-hidden="true"></span></h1>
+ 
+  <p>
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h3 class="panel-title">Phone Number</h3>
+      </div>
+      <div class="panel-body">
+
+      </div>
+    </div>
+  </p>
+  
+    <p>
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h3 class="panel-title">SMS Message</h3>
+      </div>
+      <div class="panel-body">
+
+      </div>
+    </div>
+  </p>
+  
+
+<div class="alert alert-success alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <strong>Success!</strong> Your SMS message has been sent! <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+</div>
