Task 3 in Progress

--- a/app/views/pages/sms.html.erb
+++ b/app/views/pages/sms.html.erb
@@ -6,26 +6,5 @@
     <strong>Success!</strong> Your SMS message has been sent! <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
   </div>
 
-  <p>
-    <div class="panel panel-info">
-      <div class="panel-heading">
-        <h3 class="panel-title">Phone Number</h3>
-      </div>
-      <div class="panel-body">
-
-      </div>
-    </div>
-  </p>
+<%= render :file => "home/ubuntu/workspace/app/views/messages/show.html.erb" %>
   
-    <p>
-    <div class="panel panel-info">
-      <div class="panel-heading">
-        <h3 class="panel-title">SMS Message</h3>
-      </div>
-      <div class="panel-body">
-
-      </div>
-    </div>
-  </p>
-  
-
