--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,33 +2,6 @@
 	<h1>Quick Chat <span class="glyphicon glyphicon-phone" aria-hidden="true"></span></h1>
     Submit an SMS message here!
  
-  <p>
-    <div class="panel panel-info">
-      <div class="panel-heading">
-        <h3 class="panel-title">Phone Number</h3>
-      </div>
-      <div class="panel-body">
-        <%= form_tag(sms_send_path, method: "post") do %>
-            <%= text_field_tag 'sms', nil, placeholder: 'Enter number here...', size: 75 %>
-          <% end %>
-      </div>
-    </div>
-  </p>
-  
-    <p>
-    <div class="panel panel-info">
-      <div class="panel-heading">
-        <h3 class="panel-title">SMS Message</h3>
-      </div>
-      <div class="panel-body">
-        <%= form_tag(sms_send_path, method: "post") do %>
-            <%= text_field_tag 'sms', nil, placeholder: 'Enter text here...', size: 75 %>
-          <% end %>
-      </div>
-    </div>
-  </p>
-  
+<%= render :file => "home/ubuntu/workspace/app/views/messages/new.html.erb" %>
 
-<%= form_tag(sms_send_path, method: "post") do %>
-  <%= submit_tag("Send", :class => "btn btn-success btn-lg") %>
-<% end %>
+
