--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,3 +1,28 @@
-<%= form_for :message do |f| %>
+<%= form_for  @message do |f| %>
+
+ <p>
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h3 class="panel-title">Phone Number</h3>
+      </div>
+      <div class="panel-body">
+        <%= f.text_field :number, placeholder: 'Enter number here...', size: 75 %>
+      </div>
+    </div>
+  </p>
+  
+    <p>
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h3 class="panel-title">SMS Message</h3>
+      </div>
+      <div class="panel-body">
+        <%= f.text_field :text, placeholder: 'Enter text here...', size: 75 %>
+      </div>
+    </div>
+  </p>
+  
+    <%= f.submit "Send", :class => "btn btn-success btn-lg" %>
+
   
 <% end %>
